# android-rs-examples

./: README.md
hello-world-android-studio/: README.md  build.gradle
hello-world-android-studio/app/: build.gradle
hello-world-android-studio/app/src/main/rust/: Cargo.toml
hello-world-android-studio/app/src/main/rust/src/: lib.rs
hello-world-no-studio/: .gitignore  README.md  build.gradle  download.sh  env.sh  run.sh  settings.gradle
hello-world-no-studio/app/: build.gradle
hello-world-no-studio/app/src/main/: AndroidManifest.xml
hello-world-no-studio/app/src/main/java/com/example/helloworld/: MainActivity.kt
hello-world-no-studio/app/src/main/res/layout/: activity_main.xml
hello-world-no-studio/app/src/main/rust/src/: lib.rs
rust-library/: README.md
